--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,20 @@
         />
         <!-- Styles CSS -->
         <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="modal.css" />
         <title>Earthquake Tracker TR</title>
     </head>
     <body>
         <div id="root"></div>
     </body>
+    <!-- Bootstrap JS -->
+    <script 
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
+        crossorigin="anonymous"
+    ></script>
+
     <!-- React-Leaflet JS 
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" 
-  integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>-->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" 
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>-->
 </html>
