--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,11 @@
             crossorigin=""
         />
         <!-- Styles CSS -->
-        <link rel="stylesheet" href="styles.css" />
-        <link rel="stylesheet" href="modal.css" />
+        <link rel="stylesheet" href="css/styles.css" />
+        <link rel="stylesheet" href="css/navbar.css" />
+        <link rel="stylesheet" href="css/footer.css" />
+        <!-- Favicons -->
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
         <title>Earthquake Tracker TR</title>
     </head>
     <body>
